<resources>
    <string name="action_search">Search</string>
    <string name="action_info">Info</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_about">About</string>
    <string name="action_update">Check For Update</string>
    <string name="app_name" translatable="false">KNers App</string>
    <string name="app_about">About KNers App</string>
    <string name="app_main_text">Products Knowledge</string>
    <string name="app_screenshot">Result</string>
    <string name="app_project_tracker_fi" translatable="false">Project Tracker FI</string>
    <string name="button_diabetasol">Diabetasol</string>
    <string name="button_inventory_manager">Inventory Manager (In Depelopment)</string>
    <string name="button_verify">Verify</string>
    <string name="button_scan">Scan Standard QR CODE</string>
    <string name="button_about">About</string>
    <string name="button_code_match_inspection">Code Match Inspection</string>
    <string name="button_kner_browser">KNer Browser</string>
    <string name="button_history">History</string>
    <string name="button_ocr_activity">Realtime OCR</string>
    <string name="button_produk_knowledge">Products Knowledge (In Depelopment)</string>
    <string name="button_preview">Preview</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_signin">Sign In</string>
    <string name="button_signout">Sign Out</string>
    <string name="button_profile" translatable="false">Profile</string>
    <string name="text_open_ocr">[Open OCR]</string>
    <string name="text_actual_code">Actual Code</string>
    <string name="text_verify_code">Code Verification</string>
    <string name="text_verify_result">VERIFICATION RESULT</string>
    <string name="text_code_right">CODE IS RIGHT</string>
    <string name="text_code_wrong">CODE IS WRONG</string>
    <string name="text_code_empty">CODE IS EMPTY</string>
    <string name="text_nobo">BO Number:</string>
    <string name="title_produk_knowledge">Products Knowledge</string>
    <string name="title_info">About KNers Browser</string>
    <string name="title_webview">KNers Browser</string>
    <string name="title_new_item">New Item</string>
    <string name="title_qc_inline" translatable="false">QC Inline</string>
    <string name="title_act_code">Actual Code</string>
    <string name="title_std_code">Standard Code</string>
    <string name="title_code_match">Code Match Inspection</string>
    <string name="menentukan_tema">1. Select The Theme</string>
    <string name="menentukan_target">2. Setting Target</string>
    <string name="anakonda">3. Analyzing Existing Conditions</string>
    <string name="anaseba">4. Conducting Causal Analysis</string>
    <string name="rencana_penanggulangan">5. Planning For Countermeasures</string>
    <string name="penanggulangan">6. Implement Countermeasures</string>
    <string name="evaluasi_hasil">7. Evaluating Countermeasures</string>
    <string name="standarisasi_dan_tindak_lanjut">8. Standardization and Next Plan</string>
    <string name="sum_info">KNers Browser adalah custom browser yang dikembangkan oleh NDU sebagai alat untuk memuat data pada internet dengan pengaturan yang disesuaikan agar tidak memberatkan aplikasi</string>
    <string name="sum_about">The KNers App is a prototype Portal Application for all needs at Kalbe Nutritionals - Sanghiang Perkasa\nDeveloped by NDU (Nandur93)\n[Management System Plant]</string>
    <string name="sum_search">Usage of SearchView in an ActionBar as a menu item. Implementing SearchView in action bar. Add search function to list view in android. Learn to Styling the ActionBar SearchView in android app or game</string>
    <string name="bo_null">BO number is empty</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="ok" translatable="false">OK</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="hint_no_bo">BO Number</string>
    <string name="fui_name_hint">Name</string>
    <string name="fui_nik_hint">NIK</string>
    <string name="pref_sound">Sounds</string>
    <string name="failed">Gagal</string>
    <string name="create_a_new_account">Create a new Account!</string>
    <string name="already_a_member_signin">Already a member? Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_profile" translatable="false">Profile</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="menu_version_code" translatable="false">Version Code 5</string>
    <string name="menu_version_name" translatable="false">Revision 1.8</string>
    <string name="title_info_version_code">Version Code</string>
    <string name="sum_info_version_code">Version 5</string>
    <string name="sum_info_version_name">Revision 1.8</string>
    <string name="title_info_version_name">Version Name</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="title_activity_project_tracker" translatable="false">ProjectTrackerActivity</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="button_project_tracker" translatable="false">Project Tracker FI</string>
    <string name="profile_picture" translatable="false">Profile Picture</string>
    <string name="dept_hint" translatable="false">Department</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="app_version">App Version</string>
    <string name="button_grid_menu" translatable="false">Grid Menu</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="version_name" translatable="false">key_vers_name</string>
    <string name="settings_check_for_updates" translatable="false">Check for updates</string>
    <string name="settings_check_for_updates_summary" translatable="false">Check for new versions using AppUpdater library.</string>
    <string name="button_unmount_otg">Unmount OTG</string>
    <string name="static_shortcut_disabled_message_codematch" translatable="false">Shortcut ocr is disabled</string>
    <string name="shortcut_long_label_codematch" translatable="false">Launch OCR Camera</string>
    <string name="shortcut_short_label_codematch" translatable="false">OCR Camera</string>
    <string name="static_shortcut_disabled_message_unmount" translatable="false">Shortcut storage is disabled</string>
    <string name="shortcut_long_label_unmount" translatable="false">Unmount external storages</string>
    <string name="shortcut_short_label_unmount" translatable="false">Unmount OTG</string>
    <string name="button_smartqap" translatable="false">Smart QAP</string>
</resources>