<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_portrait_black_24dp"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/button_signout" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/action_about" />
    </group>

    <item android:title="@string/app_version">
        <menu>
            <item
                android:id="@+id/nav_version_name"
                android:title="@string/version_name" />
        </menu>
    </item>



</menu>
