<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Sumber Tutorial http://www.androidhive.info/2013/11/android-working-with-action-bar/

    App Icon – App branding logo or icon will be displayed here.
    View Control – A dedicated space to display app title. Also provides option to switch between views by adding spinner or tabbed navigation.
    Action Buttons – Some important actions of the app can be added here.
    Action Overflow – All unimportant action will be shown as a menu.

    -->

    <!-- Forward -->
    <item
        android:icon="@drawable/ic_navigate_next_black_24dp"
        android:title="@string/action_forward"
        app:showAsAction="never"
        android:onClick="onForward"/>

    <!-- Back -->
    <item
        android:icon="@drawable/ic_navigate_before_black_24dp"
        android:title="@string/action_back"
        app:showAsAction="never"
        android:onClick="onGoBack"/>

    <!-- Bookmark -->
    <item
        android:icon="@drawable/ic_bookmark_border_black_24dp"
        android:title="@string/action_bookmark"
        app:showAsAction="never" />

    <!-- Info -->
    <item
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/action_info"
        app:showAsAction="never"
        android:onClick="onInfo" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />


</menu>