<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_ocr_activity"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dip"
                    android:background="@color/colorPrimaryDark"
                    android:drawableStart="@drawable/ic_camera_enhance_white_24dp"
                    android:elevation="2dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/button_ocr_activity"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_code_match_activity"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dip"
                    android:background="@color/colorPrimaryDark"
                    android:drawableStart="@drawable/ic_spellcheck_white_24dp"
                    android:elevation="2dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/button_code_match_inspection"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_smartqap"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dip"
                    android:background="@color/colorPrimaryDark"
                    android:drawableStart="@drawable/fui_ic_anonymous_white_24dp"
                    android:elevation="2dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/button_smartqap"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_produk_knowledge"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/button_produk_knowledge"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_browser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_kner_browser"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_history"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_history"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_project_tracker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_project_tracker"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_grid_menu"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_grid_menu"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_unmount_otg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_unmount_otg"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_profile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_profile" />
            </LinearLayout>

        </ScrollView>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>