<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Sumber Tutorial http://www.androidhive.info/2013/11/android-working-with-action-bar/

    App Icon – App branding logo or icon will be displayed here.
    View Control – A dedicated space to display app title. Also provides option to switch between views by adding spinner or tabbed navigation.
    Action Buttons – Some important actions of the app can be added here.
    Action Overflow – All unimportant action will be shown as a menu.

    -->

    <!-- Tombol pencarian - akan selalu tampil >
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:showAsAction="never" /-->

    <!-- Check For Updates -->
    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/action_update"
        app:showAsAction="ifRoom"/>

    <!-- About -->
    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        />


</menu>